Add installer net8.0

--- a/WSSubscription/nixpacks.toml
+++ b/WSSubscription/nixpacks.toml
@@ -1,2 +1,8 @@
 [phases.setup]
 nixPkgs = ["dotnet-sdk_8.0"]
+
+[phases.build]
+cmds = ["dotnet restore", "dotnet publish -c Release -o /app/publish --no-restore"]
+
+[phases.start]
+cmd = "dotnet /app/publish/WSSubscription.dll"
