--- a/WSSubscription/Dockerfile
+++ b/WSSubscription/Dockerfile
@@ -1,14 +1,28 @@
-# Etapa 1: Construir la aplicación
-     FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-     WORKDIR /src
-     COPY . .
-     RUN dotnet restore
-     RUN dotnet publish -c Release -o /app/publish --no-restore
+# Esta fase se usa cuando se ejecuta desde VS en modo rápido (valor predeterminado para la configuración de depuración)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
+WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
 
-     # Etapa 2: Crear la imagen final
-     FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS final
-     WORKDIR /app
-     COPY --from=build /app/publish .
-     EXPOSE 8080
-     ENV ASPNETCORE_URLS=http://+:8080
-     ENTRYPOINT ["dotnet", "WSSubscription.dll"]
+
+# Esta fase se usa para compilar el proyecto de servicio
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["WSSubscription.csproj", "."]
+RUN dotnet restore "./WSSubscription.csproj"
+COPY . .
+WORKDIR "/src/."
+RUN dotnet build "./WSSubscription.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Esta fase se usa para publicar el proyecto de servicio que se copiará en la fase final.
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./WSSubscription.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+# Esta fase se usa en producción o cuando se ejecuta desde VS en modo normal (valor predeterminado cuando no se usa la configuración de depuración)
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "WSSubscription.dll"]
