--- a/WSSubscription/Dockerfile
+++ b/WSSubscription/Dockerfile
@@ -1,4 +1,6 @@
-# Esta fase se usa cuando se ejecuta desde VS en modo r·pido (valor predeterminado para la configuraciÛn de depuraciÛn)
+# Consulte https://aka.ms/customizecontainer para aprender a personalizar su contenedor de depuraci√≥n y c√≥mo Visual Studio usa este Dockerfile para compilar sus im√°genes para una depuraci√≥n m√°s r√°pida.
+
+# Esta fase se usa cuando se ejecuta desde VS en modo r√°pido (valor predeterminado para la configuraci√≥n de depuraci√≥n)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
@@ -10,18 +12,18 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["WSSubscription.csproj", "."]
-RUN dotnet restore "./WSSubscription.csproj"
+COPY ["WSSubscription/WSSubscription.csproj", "WSSubscription/"]
+RUN dotnet restore "./WSSubscription/WSSubscription.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/WSSubscription"
 RUN dotnet build "./WSSubscription.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Esta fase se usa para publicar el proyecto de servicio que se copiar· en la fase final.
+# Esta fase se usa para publicar el proyecto de servicio que se copiar√° en la fase final.
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./WSSubscription.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Esta fase se usa en producciÛn o cuando se ejecuta desde VS en modo normal (valor predeterminado cuando no se usa la configuraciÛn de depuraciÛn)
+# Esta fase se usa en producci√≥n o cuando se ejecuta desde VS en modo normal (valor predeterminado cuando no se usa la configuraci√≥n de depuraci√≥n)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
